syntax = "proto3";
package com.jayway.kday.grpc;
option java_multiple_files = true;

message YourName {
  string your_name = 1;
}

message ClueOne {
  string clue = 1;
  string message = 2;
}

message ClueTwo {
  string clue = 1;
  string message = 2;
}

message ClueThree {
  string clue = 1;
  string message = 2;
}

message ClueFour {
  string clue = 1;
  string message = 2;
}

message Key {
  string key = 1;
}

message FinalSecret {
  string final_secret = 1;
}

service Puzzle {
  rpc StartHere (YourName) returns (ClueOne);
  rpc endpointOne (ClueOne) returns (ClueTwo);
  rpc endpointTwo (ClueTwo) returns (ClueThree);
  rpc endpointThree (ClueThree) returns (ClueFour);
  rpc SolvePuzzle (Key) returns (FinalSecret);
}
